# VSTReader

./: CMakeLists.txt  LICENSE  README.md
Source/Plugins/: InternalPlugins.cpp
Source/UI/: GraphEditorPanel.cpp  GraphEditorPanel.h  PluginWindow.h
juce_612/examples/Assets/: DemoUtilities.h
juce_612/extras/AudioPluginHost/Builds/Android/app/src/main/assets/: WavefrontObjParser.h
juce_612/extras/AudioPluginHost/Source/UI/: GraphEditorPanel.cpp  GraphEditorPanel.h
